Tue Sep 18 04:03:11 BST 2007  Olly Betts <olly@survex.com>

	* php/util.i: Remove typemap for std::string which is no longer needed
	  since SWIG now has the same version.

Sun Sep 16 20:46:48 BST 2007  Olly Betts <olly@survex.com>

	* python/Makefile.am: Need to clean up testsuite.pyc too.

Sun Sep 16 12:17:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* java/native/Makefile.am: Change $(jnilib) to $(jnidir) in
	  uninstall-local rule - there's no such variable as jnilib, so I
	  think this was a typo.

Sun Sep 16 04:26:02 BST 2007  Olly Betts <olly@survex.com>

	* java/org/xapian/Makefile.am: Rewrite comment I can't parse.  Rename
	  INNERCLASS_FILES to XAPIAN_INNER_CLASS_FILES for consistency.

Sun Sep 16 04:22:16 BST 2007  Olly Betts <olly@survex.com>

	* java/native/org_xapian_XapianJNI.h,java/org/xapian/Xapian.java,
	  java/org/xapian/XapianJNI.java: Remove wrappers for the Muscat36
	  backend, which has now been dropped from the C++ library.

Sun Sep 16 04:03:30 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am,java/native/Makefile.am,php/Makefile.am,
	  python/Makefile.am,ruby/Makefile.am,tcl8/Makefile.am: Restore the
	  install-data-hook rules, and add uninstall-local rules so that
	  "make uninstall" works (which also allows it to work for java on
	  Mac OS X).

Sun Sep 16 00:00:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* java/org/xapian/Makefile.am: Add list of files generated from
	  inner classes to CLEANFILES.  (Don't add them to noinst_DATA
	  because there's no obvious rule which generates them, and adding
	  them to noinst_DATA would make them prerequisites for the
	  "all-am" target.)

Sat Sep 15 23:39:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* java-swig/Makefile.am,java/native/Makefile.am,php/Makefile.am,
	  python/Makefile.am,ruby/Makefile.am,tcl8/Makefile.am: Remove
	  install-data-hook rules which removed the installed .la files -