@@ -112,4 +112,28 @@ $oquery = $oqparser->parse_query("I like tea");
 # Regression test for bug#192 - fixed in 1.0.3.
 $enq->set_cutoff(100);
 
+# Check DateValueRangeProcessor works.
+$qp = new XapianQueryParser();
+$vrpdate = new XapianDateValueRangeProcessor(1, 1, 1960);
+$qp->add_valuerangeprocessor($vrpdate);
+$query = $qp->parse_query('12/03/99..12/04/01');
+if ($query->get_description() !== 'Xapian::Query(VALUE_RANGE 1 19991203 20011204)') {
+    print "XapianDateValueRangeProcessor didn't work - result was ".$query->get_description()."\n";
+    exit(1);
+}
+
+# Regression test for bug#193, fixed in 1.0.3.
+$vrp = new XapianNumberValueRangeProcessor(0, "\$", true);
+$a = "$10";
+$b = "20";
+$vrp->apply($a, $b);
+if (Xapian::sortable_unserialise($a) != 10) {
+    print Xapian::sortable_unserialise($a)." != 10\n";
+    exit(1);
+}
+if (Xapian::sortable_unserialise($b) != 20) {
+    print Xapian::sortable_unserialise($b)." != 20\n";
+    exit(1);
+}
+
 ?>
